--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
         <h1>
             Odin Recipes
         </h1>
+        <ul>
+            <li>
+                <a href="/recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
+            </li>
+            <li>
+                <a href="/recipes/hummus-pizza.html">Hummus Pizza</a>
+            </li>
+            <li>
+                <a href="/recipes/lasagna.html">Lasagna</a>
+            </li>
+            <li>
+                <a href="/recipes/ube-cheesecake.html">Ube Cheesecake</a>
+            </li>
+        </ul>
 
 
     </body>
