--- a/recipes/hummus-pizza.html
+++ b/recipes/hummus-pizza.html
@@ -7,5 +7,33 @@
 
     <body>
         <h1>Hummus Pizza</h1>
+        <img src="./recipes-images/hummus-pizza.png">
+        <h2>Description</h2>
+        <p>
+            This pizza uses hummus instead of the usual red sauce—a unique and healthy pizza for those bored with the traditional. Top with your favorite veggies and cheese.
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 (10 ounce) can refrigerated pizza crust dough</li>
+            <li>1 cup hummus spread</li>
+            <li>1 ½ cups sliced bell peppers, any color</li>
+            <li>1 cup broccoli florets/li>
+            <li>2 cups shredded Monterey Jack cheese</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <strong><li>Step</li></strong>
+            <p>
+                Preheat the oven to 475 degrees C (220 degrees C).            
+            </p>
+            <strong><li>Step</li></strong>
+            <p>
+                Roll out pizza crust and place on a pizza pan or baking sheet. Spread a thin layer of hummus over the crust. Arrange sliced peppers and broccoli over the hummus, and top with shredded cheese.
+            </p>
+            <strong><li>Step</li></strong>
+            <p>
+                Bake in the preheated oven until the crust is golden brown and cheese is melted in the center, 10 to 15 minutes. Slice and serve.
+            </p>
+        </ol>
     </body>
 </html>
