add lasagna.html description of the plate, ingredients and steps

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,45 @@
 
     <body>
         <h1>Lasagna</h1>
+        <img src="./recipes-images/chicken-tortilla-soup.png">
+        <h2>Description</h2>
+        <p>
+            This chicken tortilla soup with shredded chicken, black beans, and corn is quick to make, full of flavor, and very filling! It's garnished with chopped fresh avocado, Monterey Jack cheese, crushed tortilla chips, and green onion. This soup freezes well.
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Meat</li>
+            <li>Onion</li>
+            <li>Canned Tomatoes</li>
+            <li>Fresh Herbs</li>
+            <li>Sugar</li>
+            <li>Spices and Seasonings</li>
+            <li>Noodles</li>
+            <li>Chesse</li>
+            <li>Eggs</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <strong><li>Cooke the meat</li></strong>
+            <p>
+                Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.
+            </p>
+            <strong><li>Cook the noodles</li></strong>
+            <p>
+                Boil the lasagna noodles in lightly salted water until they're al dente.
+            </p>
+            <strong><li>Make the cheese layer</li></strong>
+            <p>
+                Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.
+            </p>
+            <strong><li>Assemble the lasagna</li></strong>
+            <p>
+                Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.
+            </p>
+            <strong><li>Bake the lasagna</li></strong>
+            <p>
+                Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.
+            </p>
+        </ol>
     </body>
 </html>
