--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         </h1>
         <ul>
             <li>
-                <a href="./recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
+                <a href="../recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
             </li>
             <li>
-                <a href="./recipes/hummus-pizza.html">Hummus Pizza</a>
+                <a href="../recipes/hummus-pizza.html">Hummus Pizza</a>
             </li>
             <li>
                 <a href="./recipes/lasagna.html">Lasagna</a>
