fix index.html relative path to pages

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <a href="../recipes/hummus-pizza.html">Hummus Pizza</a>
             </li>
             <li>
-                <a href="./recipes/lasagna.html">Lasagna</a>
+                <a href="../recipes/lasagna.html">Lasagna</a>
             </li>
             <li>
-                <a href="./recipes/ube-cheesecake.html">Ube Cheesecake</a>
+                <a href="../recipes/ube-cheesecake.html">Ube Cheesecake</a>
             </li>
         </ul>
 
