--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>
             Odin Recipes
         </h1>
+        <img src="./images/remy.png">
         <ul>
             <li>
                 <a href="../recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
