--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <img src="./images/remy.png">
         <ul>
             <li>
-                <a href="../recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
+                <a href="./recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
             </li>
             <li>
-                <a href="../recipes/hummus-pizza.html">Hummus Pizza</a>
+                <a href="./recipes/hummus-pizza.html">Hummus Pizza</a>
             </li>
             <li>
-                <a href="../recipes/lasagna.html">Lasagna</a>
+                <a href="./recipes/lasagna.html">Lasagna</a>
             </li>
             <li>
-                <a href="../recipes/ube-cheesecake.html">Ube Cheesecake</a>
+                <a href="./recipes/ube-cheesecake.html">Ube Cheesecake</a>
             </li>
         </ul>
 
