--- a/index.html
+++ b/index.html
@@ -3,28 +3,30 @@
     <head>
         <meta charset="utf-8">
         <title>Recipes</title>
+
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>
             Odin Recipes
         </h1>
-        <img src="./images/remy.png">
-        <ul>
-            <li>
-                <a href="../odin-recipes/recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
-            </li>
-            <li>
-                <a href="../odin-recipes/recipes/hummus-pizza.html">Hummus Pizza</a>
-            </li>
-            <li>
-                <a href="../odin-recipes/recipes/lasagna.html">Lasagna</a>
-            </li>
-            <li>
-                <a href="../odin-recipes/recipes/ube-cheesecake.html">Ube Cheesecake</a>
-            </li>
-        </ul>
+        <img class="center" src="./images/remy.png">
 
+            <ul class="list">
+                <li>
+                    <a href="./recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
+                </li>
+                <li>
+                    <a href="./recipes/hummus-pizza.html">Hummus Pizza</a>
+                </li>
+                <li>
+                    <a href="./recipes/lasagna.html">Lasagna</a>
+                </li>
+                <li>
+                    <a href="./recipes/ube-cheesecake.html">Ube Cheesecake</a>
+                </li>
+            </ul>
 
     </body>
 </html>
