link styles.css to files and add center class to images

--- a/recipes/chicken-tortilla-soup.html
+++ b/recipes/chicken-tortilla-soup.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Chicken Tortilla Soup</title>
+
+        <link rel="stylesheet" href="../styles.css">
+
     </head>
 
     <body>
         <h1>Chicken Tortilla Soup</h1>
-        <img src="./recipes-images/chicken-tortilla-soup.png">
+        <img class="center" src="./recipes-images/chicken-tortilla-soup.png">
         <h2>Description</h2>
         <p>
             This chicken tortilla soup with shredded chicken, black beans, and corn is quick to make, full of flavor, and very filling! It's garnished with chopped fresh avocado, Monterey Jack cheese, crushed tortilla chips, and green onion. This soup freezes well.
