--- a/recipes/hummus-pizza.html
+++ b/recipes/hummus-pizza.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Hummus Pizza</title>
+        <link rel="stylesheet" href="../styles.css">
+
     </head>
 
     <body>
         <h1>Hummus Pizza</h1>
-        <img src="./recipes-images/hummus-pizza.png">
+        <img class="center" src="./recipes-images/hummus-pizza.png">
         <h2>Description</h2>
         <p>
             This pizza uses hummus instead of the usual red sauce—a unique and healthy pizza for those bored with the traditional. Top with your favorite veggies and cheese.
