--- a/recipes/ube-cheesecake.html
+++ b/recipes/ube-cheesecake.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Ube Cheescake</title>
+        <link rel="stylesheet" href="../styles.css">
+
     </head>
 
     <body>
         <h1>Ube Cheescake</h1>
-        <img src="./recipes-images/ube-cheesecake.png">
+        <img class="center" src="./recipes-images/ube-cheesecake.png">
         <h2>Description</h2>
         <p>
             This is the perfect sweet treat or dessert for a special occasion. The purple color gives it that wow-factor that will definitely turn heads.
